Changelog
=========

3.5.4 (unreleased)
------------------

- Nothing changed yet.


3.5.3 (2013-03-05)
------------------

- Revert accidental change to default encoding for validateTicket.
  [davisagli]

3.5.2 (2012-12-09)
------------------

- Use constant time comparison when validating tickets. This is part of the fix
  for https://plone.org/products/plone/security/advisories/20121106/23
  [davisagli]

3.5.1 - 2012-11-02
------------------

- Handle encoded strings for userids.
  [elro]

- Add MANIFEST.in.
  [WouterVH]

- Fix for Python 2.4 under 64bit Mac OS generating incorrect mod_auth_tkt 
  digests
  [MatthewWilkes]


3.5 - 2011-03-19
----------------

- Disable secure cookie in development mode, to ease local testing.
  [hannosch]


3.4 - 2011-03-02
----------------

- Added metadata.xml to the default profile.
  [vincentfretin]


3.3 - 2010-12-30
----------------

- Update login.asp to match Plone 4.1 SSO login form functionality.
  [elro]

- Fix remove.
  [elro]


3.2 - 2010-12-14
----------------

- Remove ``external_login`` method, the normal ``logged_in`` script can be
  used instead.
  [elro]

- Fix refresh.
  [elro]


3.1 - 2010-11-11
----------------

- Remove ``SessionPlugin.validate(ticket)`` method, it was not required.
  [elro]


3.1b1 - 2010-10-18
------------------

- Session refresh.
  [elro]

- ``SessionPlugin.validate(ticket)`` method.
  [elro]

- Close <input> tags properly (chameleon compatibility)
  [swampmonkey]


3.0 - 2010-07-18
----------------

- Update package metadata.
  [hannosch]


3.0b5 - 2010-06-13
------------------

- Make sure to load the right meta ZCML.
  [hannosch]

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Removed dependency on GPL licensed Products.PloneTestCase.
  [hannosch]


3.0b4 - 2010-05-23
------------------

- Make the ``secure`` option of cookies configurable. This allows to restrict
  cookies to HTTPS connections alone. This closes
  http://dev.plone.org/plone/ticket/7897.